<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_no_network" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/failed_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/msg_offline"
            android:textSize="16sp" />

        <Button
            android:id="@+id/failed_retry"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/bg_button_background"
            android:foreground="?selectableItemBackground"
            android:text="@string/btn_retry"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>